force-app/main/default/objects/Case/fields/FACT_Install_date_FET__c.field-meta.xml
<CustomField>
    <fullName>FACT_Install_date_FET__c</fullName>
    <label>Install date</label>
    <type>Date</type>
</CustomField>