force-app/main/default/objects/Case/fields/FACT_JDE_Install_Date__c.field-meta.xml
<CustomField>
    <fullName>FACT_JDE_Install_Date__c</fullName>
    <label>JDE Install Date</label>
    <type>Date</type>
</CustomField>