force-app/main/default/objects/Case/fields/FACT_JDE_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>FACT_JDE_Order_Status__c</fullName>
    <label>JDE Order Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>