force-app/main/default/objects/Case/fields/FACT_JDEInstBase_Status__c.field-meta.xml
<CustomField>
    <fullName>FACT_JDEInstBase_Status__c</fullName>
    <label>Install Base Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>