force-app/main/default/objects/Case/fields/FACT_Last_Beverage_Summary_Log_posted__c.field-meta.xml
<CustomField>
    <fullName>FACT_Last_Beverage_Summary_Log_posted__c</fullName>
    <label>Last Beverage Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>