force-app/main/default/objects/Case/fields/FACT_Last_Pour_Time__c.field-meta.xml
<CustomField>
    <fullName>FACT_Last_Pour_Time__c</fullName>
    <label>Last Pour Time</label>
    <type>DateTime</type>
</CustomField>