force-app/main/default/objects/Case/fields/FACT_Last_VMS_Date__c.field-meta.xml
<CustomField>
    <fullName>FACT_Last_VMS_Date__c</fullName>
    <label>Last VMS Date</label>
    <type>DateTime</type>
</CustomField>