force-app/main/default/objects/Case/fields/FACT_Line_Type__c.field-meta.xml
<CustomField>
    <fullName>FACT_Line_Type__c</fullName>
    <label>Line Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>