force-app/main/default/objects/Case/fields/FACT_Mac_Address__c.field-meta.xml
<CustomField>
    <fullName>FACT_Mac_Address__c</fullName>
    <label>MAC Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>