force-app/main/default/objects/Case/fields/FACT_Min_signal_Strength__c.field-meta.xml
<CustomField>
    <fullName>FACT_Min_signal_Strength__c</fullName>
    <label>Min Signal Strength</label>
    <length>255</length>
    <type>Text</type>
</CustomField>