force-app/main/default/objects/Case/fields/FACT_Modem__c.field-meta.xml
<CustomField>
    <fullName>FACT_Modem__c</fullName>
    <label>Modem Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>