force-app/main/default/objects/Case/fields/FACT_Modem_ESN_Number__c.field-meta.xml
<CustomField>
    <fullName>FACT_Modem_ESN_Number__c</fullName>
    <label>ESN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>