force-app/main/default/objects/Case/fields/FACT_Modem_Type__c.field-meta.xml
<CustomField>
    <fullName>FACT_Modem_Type__c</fullName>
    <label>Modem Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USB Connected Modem</fullName>
            </value>
            <value>
                <fullName>Ethernet Connected Modem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>