force-app/main/default/objects/Case/fields/FACT_Outlet_Name__c.field-meta.xml
<CustomField>
    <fullName>FACT_Outlet_Name__c</fullName>
    <label>Outlet Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>