force-app/main/default/objects/Case/fields/FACT_Overall_FET_status__c.field-meta.xml
<CustomField>
    <fullName>FACT_Overall_FET_status__c</fullName>
    <label>FET Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>