force-app/main/default/objects/Case/fields/FACT_post_install_activity_text__c.field-meta.xml
<CustomField>
    <fullName>FACT_post_install_activity_text__c</fullName>
    <label>Post -install activity text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>