force-app/main/default/objects/Case/fields/FACT_Post_Install_proposed_date__c.field-meta.xml
<CustomField>
    <fullName>FACT_Post_Install_proposed_date__c</fullName>
    <label>Post Install proposed date</label>
    <type>Date</type>
</CustomField>