force-app/main/default/objects/Case/fields/FACT_RollUpGcInContainmen__c.field-meta.xml
<CustomField>
    <fullName>FACT_RollUpGcInContainmen__c</fullName>
    <label>RollUpGcInContainment</label>
    <summarizedField>Case_Status_History_Detail__c.Duration__c</summarizedField>
    <summaryFilterItems>
        <field>Case_Status_History_Detail__c.Status__c</field>
        <operation>equals</operation>
        <value>Escalated</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Case_Status_History_Detail__c.Sub_Status__c</field>
        <operation>equals</operation>
        <value>GC In Containment</value>
    </summaryFilterItems>
    <summaryForeignKey>Case_Status_History_Detail__c.Parent_Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>