force-app/main/default/objects/Case/fields/FACT_SAP_Ship_to_ID__c.field-meta.xml
<CustomField>
    <fullName>FACT_SAP_Ship_to_ID__c</fullName>
    <label>SAP#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>