force-app/main/default/objects/Case/fields/FACT_Signal_Strength__c.field-meta.xml
<CustomField>
    <fullName>FACT_Signal_Strength__c</fullName>
    <label>Signal Strength</label>
    <length>255</length>
    <type>Text</type>
</CustomField>