force-app/main/default/objects/Case/fields/FACT_State__c.field-meta.xml
<CustomField>
    <fullName>FACT_State__c</fullName>
    <label>State</label>
    <length>10</length>
    <type>Text</type>
</CustomField>