force-app/main/default/objects/Case/fields/FACT_Status_Open_Closed__c.field-meta.xml
<CustomField>
    <fullName>FACT_Status_Open_Closed__c</fullName>
    <formula>IF( (ISPICKVAL( Status ,&#39;Complete&#39;)  || ISPICKVAL( Status ,&#39;Closed&#39;)  || ISPICKVAL(  Sub_Status__c ,&#39;GC Completed&#39;)) , &#39;Closed&#39;, &#39;Open&#39;)</formula>
    <label>Status(Open/Closed)</label>
    <type>Text</type>
</CustomField>