force-app/main/default/objects/Case/fields/FACT_StatusGcInContainmentMins__c.field-meta.xml
<CustomField>
    <fullName>FACT_StatusGcInContainmentMins__c</fullName>
    <formula>IF((TEXT(Status)==&#39;Escalated&#39;&amp;&amp;TEXT(Sub_Status__c)==&#39;GC In Containment&#39;),(FACT_RollUpGcInContainmen__c+((NOW()-Last_Status_Change__c)*1440)),FACT_RollUpGcInContainmen__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StatusGcInContainmentMins</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>