force-app/main/default/objects/Case/fields/FACT_StatusGcInValidationMins__c.field-meta.xml
<CustomField>
    <fullName>FACT_StatusGcInValidationMins__c</fullName>
    <formula>IF((TEXT(Status)==&#39;Escalated&#39;&amp;&amp;TEXT(Sub_Status__c)==&#39;GC In Validation&#39;),(FACT_RollUpGcInValidation__c+((NOW()-Last_Status_Change__c)*1440)),FACT_RollUpGcInValidation__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StatusGcInValidationMins</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>