force-app/main/default/objects/Case/fields/FACT_StatusInContainmentInMins__c.field-meta.xml
<CustomField>
    <fullName>FACT_StatusInContainmentInMins__c</fullName>
    <formula>IF( (ISPICKVAL(Status,&#39;Containment&#39;)),( FACT_RollUpInContainment__c+((NOW()-Last_Status_Change__c)*1440)),FACT_RollUpInContainment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StatusInContainmentInMins</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>