force-app/main/default/objects/Case/fields/FACT_StatusValidationInMins__c.field-meta.xml
<CustomField>
    <fullName>FACT_StatusValidationInMins__c</fullName>
    <formula>IF( (ISPICKVAL(Status,&#39;Validation&#39;)),( FACT_RollUpValidation__c+((NOW()-Last_Status_Change__c)*1440)),FACT_RollUpValidation__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StatusValidationInMins</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>