force-app/main/default/objects/Case/fields/FACT_TEC_Ticket_Details__c.field-meta.xml
<CustomField>
    <fullName>FACT_TEC_Ticket_Details__c</fullName>
    <label>Work Order Details</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>