force-app/main/default/objects/Case/fields/FACT_TEC_Ticket_ID_number__c.field-meta.xml
<CustomField>
    <fullName>FACT_TEC_Ticket_ID_number__c</fullName>
    <label>Work Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>