force-app/main/default/objects/Case/fields/FACT_Time_of_Escalation__c.field-meta.xml
<CustomField>
    <fullName>FACT_Time_of_Escalation__c</fullName>
    <label>Time of Escalation</label>
    <type>DateTime</type>
</CustomField>