force-app/main/default/objects/Case/fields/FACT_Time_of_GC_Complete__c.field-meta.xml
<CustomField>
    <fullName>FACT_Time_of_GC_Complete__c</fullName>
    <label>Time of GC Complete</label>
    <type>DateTime</type>
</CustomField>