force-app/main/default/objects/Case/fields/FACT_Valid_FIll__c.field-meta.xml
<CustomField>
    <fullName>FACT_Valid_FIll__c</fullName>
    <label>Valid FIll</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>