force-app/main/default/objects/Case/fields/FinalClosedDate__c.field-meta.xml
<CustomField>
    <fullName>FinalClosedDate__c</fullName>
    <formula>IF(isblank(CustomClosedDate__c),  ClosedDate ,  CustomClosedDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FinalClosedDate</label>
    <type>DateTime</type>
</CustomField>