force-app/main/default/objects/Case/fields/FinanceOnHold_Mins__c.field-meta.xml
<CustomField>
    <fullName>FinanceOnHold_Mins__c</fullName>
    <formula>IF((TEXT(Status)==&#39;Assigned&#39;&amp;&amp; TEXT(LM_Sub_Status__c)==&#39;Finance on Hold&#39;),(	RollUpFinanceOnHold__c+((NOW()-Last_Status_Change__c)*1440)),RollUpFinanceOnHold__c)</formula>
    <label>FinanceOnHold_Mins</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>