force-app/main/default/objects/Case/fields/From_Account__c.field-meta.xml
<CustomField>
    <fullName>From_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>FS Outlet</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>LMCases</relationshipLabel>
    <relationshipName>LinkageCases</relationshipName>
    <type>Lookup</type>
</CustomField>