force-app/main/default/objects/Case/fields/FS_ACN__c.field-meta.xml
<CustomField>
    <fullName>FS_ACN__c</fullName>
    <formula>FS_Outlet_Dispenser__r.FS_ACN_NBR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACN#</label>
    <type>Text</type>
</CustomField>