force-app/main/default/objects/Case/fields/FS_Address__c.field-meta.xml
<CustomField>
    <fullName>FS_Address__c</fullName>
    <formula>FS_Outlet_Dispenser__r.FS_Outlet__r.CCR_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>