force-app/main/default/objects/Case/fields/FS_Asset_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>FS_Asset_Item_Number__c</fullName>
    <formula>FS_Outlet_Dispenser__r.FS_Asset_Item_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Item Number</label>
    <type>Text</type>
</CustomField>