force-app/main/default/objects/Case/fields/FS_Average_Signal_Strength__c.field-meta.xml
<CustomField>
    <fullName>FS_Average_Signal_Strength__c</fullName>
    <formula>FS_Outlet_Dispenser__r.FS_Average_Signal_Strength__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Signal Strength</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>