force-app/main/default/objects/Case/fields/FS_Build_Install_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Build_Install_Date__c</fullName>
    <formula>FS_Outlet_Dispenser__r.FS_Build_Install_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Build Install Date</label>
    <type>Date</type>
</CustomField>