force-app/main/default/objects/Case/fields/FS_Bundle_Downloaded__c.field-meta.xml
<CustomField>
    <fullName>FS_Bundle_Downloaded__c</fullName>
    <formula>FS_Outlet_Dispenser__r.FS_Bundle_Downloaded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bundle Downloaded</label>
    <type>Text</type>
</CustomField>