force-app/main/default/objects/Case/fields/FS_CMS_Version__c.field-meta.xml
<CustomField>
    <fullName>FS_CMS_Version__c</fullName>
    <formula>FS_Outlet_Dispenser__r.FS_CMS_Version__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CMS Version</label>
    <type>Text</type>
</CustomField>