force-app/main/default/objects/Case/fields/FS_Comment_Created_By_Username__c.field-meta.xml
<CustomField>
    <fullName>FS_Comment_Created_By_Username__c</fullName>
    <description>Stores the Username of the last Comment creator</description>
    <label>Comment Created By Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>