force-app/main/default/objects/Case/fields/FS_CommentBodyUpdate__c.field-meta.xml
<CustomField>
    <fullName>FS_CommentBodyUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It is used to check weather a comment was updated in the casecomment object.</description>
    <label>Comment Body Update</label>
    <type>Checkbox</type>
</CustomField>