force-app/main/default/objects/Case/fields/FS_CommentCreatedBy__c.field-meta.xml
<CustomField>
    <fullName>FS_CommentCreatedBy__c</fullName>
    <description>It is used for storing the name of comment creator from the casecomment object.</description>
    <label>CommentCreated By</label>
    <length>200</length>
    <type>Text</type>
</CustomField>