force-app/main/default/objects/Case/fields/FS_CustomCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>FS_CustomCreatedDate__c</fullName>
    <label>FS CustomCreatedDate</label>
    <type>DateTime</type>
</CustomField>