force-app/main/default/objects/Case/fields/FS_CustomLastModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>FS_CustomLastModifiedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FS CustomLastModifedBy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>