force-app/main/default/objects/Case/fields/FS_CustomLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>FS_CustomLastModifiedDate__c</fullName>
    <label>FS CustomLastModifiedDate</label>
    <type>DateTime</type>
</CustomField>