force-app/main/default/objects/Case/fields/FS_Days_Since_Last_Seen__c.field-meta.xml
<CustomField>
    <fullName>FS_Days_Since_Last_Seen__c</fullName>
    <formula>TODAY() -  (FS_Outlet_Dispenser__r.FS_Last_Seen_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since Last Seen</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>