force-app/main/default/objects/Case/fields/FS_Dispenser_Type__c.field-meta.xml
<CustomField>
    <fullName>FS_Dispenser_Type__c</fullName>
    <description>FS Dispenser Type</description>
    <inlineHelpText>Please enter dispenser type</inlineHelpText>
    <label>FS Dispenser Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2000 Series</fullName>
            </value>
            <value>
                <fullName>3100 Series</fullName>
            </value>
            <value>
                <fullName>6000 Series</fullName>
            </value>
            <value>
                <fullName>7000 Series</fullName>
            </value>
            <value>
                <fullName>7100 Series</fullName>
            </value>
            <value>
                <fullName>8000 Series</fullName>
            </value>
            <value>
                <fullName>9000 Series</fullName>
            </value>
            <value>
                <fullName>9100 Series</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>