force-app/main/default/objects/Case/fields/FS_FET_Status__c.field-meta.xml
<CustomField>
    <fullName>FS_FET_Status__c</fullName>
    <formula>FS_Outlet_Dispenser__r.Installation__r.Overall_Status2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FET Status</label>
    <type>Text</type>
</CustomField>