force-app/main/default/objects/Case/fields/FS_FinalCustomCreatedBy__c.field-meta.xml
<CustomField>
    <fullName>FS_FinalCustomCreatedBy__c</fullName>
    <formula>IF(isblank(FS_CustomCreatedBy__c),   CreatedBy.FirstName  &amp;&quot; &quot;&amp; CreatedBy.LastName    ,  FS_CustomCreatedBy__r.FirstName  &amp;&quot; &quot;&amp; FS_CustomCreatedBy__r.LastName  )</formula>
    <label>FS FinalCustomCreatedBy</label>
    <type>Text</type>
</CustomField>