force-app/main/default/objects/Case/fields/FS_FinalCustomCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>FS_FinalCustomCreatedDate__c</fullName>
    <formula>IF(isblank(FS_CustomCreatedDate__c),  CreatedDate ,  FS_CustomCreatedDate__c )</formula>
    <label>FS FinalCustomCreatedDate</label>
    <type>DateTime</type>
</CustomField>