force-app/main/default/objects/Case/fields/FS_FinalCustomLastModifiedby__c.field-meta.xml
<CustomField>
    <fullName>FS_FinalCustomLastModifiedby__c</fullName>
    <formula>IF(isblank(FS_CustomLastModifiedBy__c), LastModifiedBy.FirstName &amp;&quot; &quot;&amp; LastModifiedBy.LastName , FS_CustomLastModifiedBy__r.FirstName &amp;&quot; &quot;&amp; FS_CustomLastModifiedBy__r.LastName )</formula>
    <label>FS FinalCustomLastModifiedby</label>
    <type>Text</type>
</CustomField>