force-app/main/default/objects/Case/fields/FS_FinalCustomLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>FS_FinalCustomLastModifiedDate__c</fullName>
    <formula>IF(isblank(FS_CustomLastModifiedDate__c),  LastModifiedDate ,  FS_CustomLastModifiedDate__c )</formula>
    <label>FS FinalCustomLastModifiedDate</label>
    <type>DateTime</type>
</CustomField>