force-app/main/default/objects/Case/fields/FS_First_System_DB__c.field-meta.xml
<CustomField>
    <fullName>FS_First_System_DB__c</fullName>
    <formula>FS_Outlet_Dispenser__r.FS_First_System_DB__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First System DB</label>
    <type>Date</type>
</CustomField>