force-app/main/default/objects/Case/fields/FS_Install_Base_Status_Descr__c.field-meta.xml
<CustomField>
    <fullName>FS_Install_Base_Status_Descr__c</fullName>
    <formula>FS_Outlet_Dispenser__r.FS_Install_Base_Status_Descr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Install Base Status Description</label>
    <type>Text</type>
</CustomField>