force-app/main/default/objects/Case/fields/FS_Install_date__c.field-meta.xml
<CustomField>
    <fullName>FS_Install_date__c</fullName>
    <formula>FS_Outlet_Dispenser__r.FS_Date_Installed2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Install date</label>
    <type>Date</type>
</CustomField>