force-app/main/default/objects/Case/fields/FS_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>FS_IP_Address__c</fullName>
    <formula>FS_Outlet_Dispenser__r.FS_IP_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IP Address</label>
    <type>Text</type>
</CustomField>