force-app/main/default/objects/Case/fields/FS_Issue_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Issue_Updated_Date__c</fullName>
    <label>FS Issue Updated Date</label>
    <type>DateTime</type>
</CustomField>