force-app/main/default/objects/Case/fields/FS_JDE_Ordered_User__c.field-meta.xml
<CustomField>
    <fullName>FS_JDE_Ordered_User__c</fullName>
    <formula>FS_Outlet_Dispenser__r.FS_JDE_Ordered_User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JDE Document User</label>
    <type>Text</type>
</CustomField>