force-app/main/default/objects/Case/fields/FS_Last_Seen_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Last_Seen_Date__c</fullName>
    <formula>FS_Outlet_Dispenser__r.FS_Last_Seen_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AW Last Seen Date</label>
    <type>Date</type>
</CustomField>