force-app/main/default/objects/Case/fields/FS_LatestCommentBody__c.field-meta.xml
<CustomField>
    <fullName>FS_LatestCommentBody__c</fullName>
    <label>Latest Comment Body</label>
    <type>TextArea</type>
</CustomField>