force-app/main/default/objects/Case/fields/FS_LM_Case_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>FS_LM_Case_Record_Type__c</fullName>
    <description>Created this field to display purpose only on the LM case create and edit popup. (LWC Component)</description>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Record Type</label>
    <type>Text</type>
</CustomField>