force-app/main/default/objects/Case/fields/FS_logged_in_user__c.field-meta.xml
<CustomField>
    <fullName>FS_logged_in_user__c</fullName>
    <formula>$User.Id = LastModifiedById</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged in user</label>
    <type>Checkbox</type>
</CustomField>