force-app/main/default/objects/Case/fields/FS_Modem_ESN__c.field-meta.xml
<CustomField>
    <fullName>FS_Modem_ESN__c</fullName>
    <formula>FS_Outlet_Dispenser__r.FS_Modem_ESN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modem ESN</label>
    <type>Text</type>
</CustomField>