force-app/main/default/objects/Case/fields/FS_Modem_Info_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Modem_Info_Date__c</fullName>
    <formula>FS_Outlet_Dispenser__r.FS_Modem_Info_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modem Info Date</label>
    <type>Date</type>
</CustomField>